<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="detail_title">Detail</string>
</resources>