<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="restaurant_title">Restaurant</string>
    <string name="restaurant_rating">Rating</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="restaurant_rating_avg">Rating Average</string>
    <string name="restaurant_distance">Distance</string>
    <string name="restaurant_avg_price">Average Product Price</string>
    <string name="restaurant_min_cost">Min. Cost</string>
    <string name="restaurant_delivery_cost">Delivery Cost</string>
    <string name="restaurant_newest">Newest</string>
    <string name="restaurant_popularity">Popularity</string>
    <string name="restaurant_best_match">Best Match</string>
    <string name="restaurant_search_icon">Search Icon</string>
</resources>